# riscv-perf-sim

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/isa/: decoder.cpp  decoder.hpp
tests/: CMakeLists.txt  test_core.cpp  test_decoder.cpp
